--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
 
         <dependency>
 <!--
-            <groupId>com.querydsl</groupId>
+            <groupId>io.github.openfeign.querydsl</groupId>
 -->
             <groupId>io.github.openfeign.querydsl</groupId>
             <artifactId>querydsl-apt</artifactId>
